--- a/Tamagotchi/Views/Shared/_Layout.cshtml
+++ b/Tamagotchi/Views/Shared/_Layout.cshtml
@@ -18,12 +18,16 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li> *@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tamagotchi" asp-action"Index">All Your Tamagotchis</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tamagotchi" asp-action="New">Create New Pet</a>
                         </li>
+
                     </ul>
                 </div>
             </div>
@@ -37,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - Tamagotchi - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Tamagotchi
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
