:white_check_mark: Creates REST route for creating a new and displaying a premade tamagotchi
Co-authored-by: Sammai Gutierrez <sammaigtz@hotmail.com>

--- a/Tamagotchi/Views/Shared/_Layout.cshtml
+++ b/Tamagotchi/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li> *@
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Tamagotchi" asp-action"Index">All Your Tamagotchis</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tamagotchi" asp-action="Index">Tamagotchis</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Tamagotchi" asp-action="New">Create New Pet</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tamagotchi" asp-action="New">Create New</a>
                         </li>
 
                     </ul>
@@ -33,6 +33,7 @@
             </div>
         </nav>
     </header>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
