--- a/Tamagotchi/Views/Home/Index.cshtml
+++ b/Tamagotchi/Views/Home/Index.cshtml
@@ -3,9 +3,11 @@
 }
 
 <div class="text-center">
-  <h1 class="display-4">Welcome</h1>
   <div class="container">
-    <a href="/Tamagotchi/new">Create a New Tamagotchi Pet</a>
-    <a href="/Tamagotchi">See All Your Tamagotchis</a>
+    <div class="card welcome-card row p-5 m-2">
+      <h1 class="display-4 mt-0 pb-5">Welcome</h1>
+      <a class="btn btn-lg btn-block btn-info" href="/Tamagotchi/new">Create a New Tamagotchi Pet</a>
+      <a class="btn btn-lg btn-block btn-info" href="/Tamagotchi">See All Your Tamagotchis</a>
+    </div>
   </div>
 </div>
