--- a/Tamagotchi/wwwroot/css/site.css
+++ b/Tamagotchi/wwwroot/css/site.css
@@ -55,17 +55,30 @@ button.accept-policy {
 -------------------------------------------------- */
 html {
   position: relative;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  min-height: 90vh;
+  background: url("https://www.refinedguy.com/wp-content/uploads/2017/04/Tamagotchi.jpg");
 }
+
+.welcome-card {
+  background: rgba(255,255,255,0.65);
+}
+
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+header,
+footer,
+nav {
+  background: rgba(255,255,255,0.75);
 }
