--- a/Tamagotchi/Views/Tamagotchi/New.cshtml
+++ b/Tamagotchi/Views/Tamagotchi/New.cshtml
@@ -7,10 +7,10 @@
     <div class="card welcome-card row p-5 m-2">
       <h1 class="display-4 mt-0 pb-5">Tamagotchi</h1>
       <h2>Create a New Pet!</h2>
-      <div class="container">
-        <div class="row">
-          <div class="card p-2">
-            <h3><strong>Name:</strong> Rusty</h3>
+      <div class="container justify-content-center align-items-center">
+        <div class="row justify-content-center align-items-center">
+          <div class="m-2 justify-content-center align-items-center card p-5">
+            <h3 class="border-bottom"><strong>Name:</strong> Rusty</h3>
             <h4><strong class="border-bottom">Stats:</strong></h4>
             <h5>Hunger: 40</h5>
             <h5>Sleepiness: 100</h5>
@@ -23,12 +23,47 @@
               <button type="submit" class="btn btn-block btn-info mb-2">Pick Me!</button>
             </form>
           </div>
+
+          <div class="m-2 justify-content-center align-items-center card p-5">
+            <h3 class="border-bottom"><strong>Name:</strong> Pearl</h3>
+            <h4><strong class="border-bottom">Stats:</strong></h4>
+            <h5>Hunger: 60</h5>
+            <h5>Sleepiness: 60</h5>
+            <h5>Attention Needed: 80</h5>
+            <form action="/Tamagotchi/new" method="post" class="form-inline">
+              <input type="hidden" name="Name" value="Pearl">
+              <input type="hidden" name="Hunger" value="60">
+              <input type="hidden" name="Sleepiness" value="60">
+              <input type="hidden" name="AttentionNeed" value="70">
+              <button type="submit" class="btn btn-block btn-info mb-2">Pick Me!</button>
+            </form>
+          </div>
+
+          <div class="m-2 align-items-center card p-5 d-flex-column">
+            <h3 class="border-bottom">Custom Tamagotchi</h3>
+            <form action="/Tamagotchi/new" method="post" class="d-flex-row">
+              <div class="form-group d-flex-column justify-content-between">
+                <label for="Name">Name:</label>
+                <input type="text" name="Name" value="" required>
+              </div>
+              <div class="form-group d-flex-column justify-content-between">
+                <label for="Hunger">Hunger Level:</label>
+                <input type="number" min="0" max="198" name="Hunger" id="Hunger" value="" required>
+              </div>
+              <div class="form-group d-flex-column justify-content-between">
+                <label for="Sleepiness">Sleep Level:</label>
+                <input type="number" min="0" max="198" name="Sleepiness" id="Sleepiness" value="" required>
+              </div>
+              <div class="form-group d-flex-column justify-content-between">
+              <label for="AttentionNeed">Attention Need Level:</label>
+                <input type="number" min="0" max="198" name="AttentionNeed" id="AttentionNeed" value="" required>
+              </div>
+              <button type="submit" class="btn btn-block btn-info mb-2">Pick Me!</button>
+            </form>
+          </div>
+
         </div>
       </div>
-
-      @* default 1 *@
-      @* default 2 *@
-      @* custom *@
     </div>
   </div>
 </div>
