:recycle: refactor to make tests pass by matching refactor/name changes in model Co-authored-by: Sammai Gutierrez <sammaigtz@hotmail.com>

--- a/Tamagotchi/Views/Tamagotchi/Index.cshtml
+++ b/Tamagotchi/Views/Tamagotchi/Index.cshtml
@@ -14,7 +14,7 @@
         <div class="row">
           @foreach (TamagotchiNamespace.Tamagotchi pet in Model)
           {
-            <div class="card p-2">
+            <div class="card p-2 m-2">
               <h3><strong>Name:</strong> @pet.Name</h3>
               <h4><strong class="border-bottom">Stats:</strong></h4>
               <h5>Hunger: @pet.HungerLevel</h5>
